--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
         <div class="ui-grid-col-3 center-position">
             <div class="top-space bottom-space">
                 <span class="fa fa-users fa-5x "></span>
-                <h5><a href="content/ev-virtual-auto-show.html" >EV Virtual auto show </a></h5>
-                <p class="center-position"><a href="content/ev-virtual-auto-show.html" >Click here to Virtual Show</a></p>
+                <h5><a href="./content/ev-virtual-auto-show.html" >EV Virtual auto show </a></h5>
+                <p class="center-position"><a href="./content/ev-virtual-auto-show.html" >Click here to Virtual Show</a></p>
             </div>
         </div>
         <div class="ui-grid-col-3 center-position">
