--- a/index.html
+++ b/index.html
@@ -188,29 +188,29 @@
         <div class="ui-grid-col-3 center-position">
             <div class="top-space bottom-space">
                 <span class="fa fa-users fa-5x "></span>
-                <h5><a href="./content/ev-virtual-auto-show.html" >EV Virtual auto show </a></h5>
-                <p class="center-position"><a href="./content/ev-virtual-auto-show.html" >Click here to Virtual Show</a></p>
+                <h5><a href="./ev-virtual-auto-show.html" >EV Virtual auto show </a></h5>
+                <p class="center-position"><a href="./ev-virtual-auto-show.html" >Click here to Virtual Show</a></p>
             </div>
         </div>
         <div class="ui-grid-col-3 center-position">
             <div class="top-space bottom-space">
                 <span class="fa fa-list-alt fa-5x "></span>
-                <h5><a href="content/ev-charging-infrastructure.html"> EV Charging Infrastructure  </a></h5>
-                <p class="center-position"><a href="content/ev-charging-infrastructure.html" >Click here to Charging Infrastructure </a></p>
+                <h5><a href="./ev-charging-infrastructure.html"> EV Charging Infrastructure  </a></h5>
+                <p class="center-position"><a href="./ev-charging-infrastructure.html" >Click here to Charging Infrastructure </a></p>
             </div>
         </div>
         <div class="ui-grid-col-3 center-position">
             <div class="top-space bottom-space">
                 <span class="fa fa-credit-card fa-5x "></span>
-                <h5><a href="content/ev-benefits.html">EV Benefits</a></h5>
-                <p class="center-position"><a href="content/ev-benefits.html" >Click here to Ev Benefits</a></p>
+                <h5><a href="./ev-benefits.html">EV Benefits</a></h5>
+                <p class="center-position"><a href="./ev-benefits.html" >Click here to Ev Benefits</a></p>
             </div>
         </div>
         <div class="ui-grid-col-3 center-position">
             <div class="top-space bottom-space">
                 <span class="fa fa-edit fa-5x "></span>
-                <h5><a href="content/rent-ev.html" >Rent an EV</a></h5>
-                <p class="center-position"><a href="content/rent-ev.html">Click here to Rent an EV</a></p>
+                <h5><a href="./rent-ev.html" >Rent an EV</a></h5>
+                <p class="center-position"><a href="./rent-ev.html">Click here to Rent an EV</a></p>
             </div>
         </div>
     </div>
@@ -220,29 +220,29 @@
         <div class="ui-grid-col-3 center-position">
             <div class="top-space bottom-space">
                 <span class="fa  fa-clipboard  fa-5x "></span>
-                <h5><a href="content/ev-service-center.html" >EV Service Center</a></h5>
-                <p class="center-position"><a href="content/ev-service-center.html">Click here to EV Service Center</a></p>
+                <h5><a href="./ev-service-center.html" >EV Service Center</a></h5>
+                <p class="center-position"><a href="./ev-service-center.html">Click here to EV Service Center</a></p>
             </div>
         </div>
         <div class="ui-grid-col-3 center-position">
             <div class="top-space bottom-space">
                 <span class="fa fa-registered fa-5x "></span>
-                <h5><a href="content/ev-battery-support.html">EV Battery Support</a></h5>
-                <p class="center-position"><a href="content/ev-battery-support.html" >Click here to EV Battery Support</a></p>
+                <h5><a href="./ev-battery-support.html">EV Battery Support</a></h5>
+                <p class="center-position"><a href="./ev-battery-support.html" >Click here to EV Battery Support</a></p>
             </div>
         </div>
         <div class="ui-grid-col-3 center-position">
             <div class="top-space bottom-space">
                 <span class="fa fa-ioxhost fa-5x "></span>
-                <h5><a href="content/ev-road-assistance.html" >EV Road Assistance</a></h5>
-                <p class="center-position"><a href="content/ev-road-assistance.html" >Click here to EV Road Assistance</a></p>
+                <h5><a href="./ev-road-assistance.html" >EV Road Assistance</a></h5>
+                <p class="center-position"><a href="./ev-road-assistance.html" >Click here to EV Road Assistance</a></p>
             </div>
         </div>
         <div class="ui-grid-col-3 center-position">
             <div class="top-space bottom-space">
                 <span class="fa fa-check-circle-o fa-5x "></span>
-                <h5><a href="content/ev-help-line.html" >EV Help Line</a></h5>
-                <p class="center-position"><a href="content/ev-help-line.html" >Click here to EV Help Line</a></p>
+                <h5><a href="./ev-help-line.html" >EV Help Line</a></h5>
+                <p class="center-position"><a href="./ev-help-line.html" >Click here to EV Help Line</a></p>
             </div>
         </div>
     </div>
@@ -253,22 +253,22 @@
         <div class="ui-grid-col-3 center-position">
             <div class="top-space bottom-space">
                 <span class="fa fa-money fa-5x "></span>
-                <h5><a href="content/ev-statistics.html" >EV Statistics</a></h5>
-                <p class="center-position"><a href="content/ev-statistics.html">Click here to EV Statistics</a></p>
+                <h5><a href="./ev-statistics.html" >EV Statistics</a></h5>
+                <p class="center-position"><a href="./ev-statistics.html">Click here to EV Statistics</a></p>
             </div>
         </div>
         <div class="ui-grid-col-3 center-position">
             <div class="top-space bottom-space">
                 <span class="fa fa-puzzle-piece fa-5x "></span>
-                <h5><a href="content/oem-rating.html" >OEM Ratings</a></h5>
-                <p class="center-position"><a href="content/oem-rating.html" >Click here to OEM Ratings</a></p>
+                <h5><a href="./oem-rating.html" >OEM Ratings</a></h5>
+                <p class="center-position"><a href="./oem-rating.html" >Click here to OEM Ratings</a></p>
             </div>
         </div>
         <div class="ui-grid-col-3 center-position">
             <div class="top-space bottom-space">
                 <span class="fa fa-shekel fa-5x "></span>
-                <h5><a href="content/ice-scrapping-policy.html">ICE Scrapping Policy</a></h5>
-                <p class="center-position"><a href="content/ice-scrapping-policy.html" >Click here to ICE Scrapping Policy</a></p>
+                <h5><a href="./ice-scrapping-policy.html">ICE Scrapping Policy</a></h5>
+                <p class="center-position"><a href="./ice-scrapping-policy.html" >Click here to ICE Scrapping Policy</a></p>
             </div>
         </div>
         <div class="ui-grid-col-3 center-position">
