Ev Auto Show Added

--- a/ev-virtual-auto-show.html
+++ b/ev-virtual-auto-show.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" href="https://haryanatransport.gov.in/sites/all/themes/hrsrservices/favicon.ico"
         type="image/vnd.microsoft.icon">
-    <title>Driving Licences Fee | Haryana Transport</title>
+    <title>EV-Virtual Auto Show</title>
     <style media="all">
         @import url("https://haryanatransport.gov.in/modules/system/system.base.css?rhj85d");
         @import url("https://haryanatransport.gov.in/modules/system/system.menus.css?rhj85d");
@@ -193,7 +193,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"en\/","ajaxPageSta
     <div class="ui-grid-row">
         <div class="ui-grid-col-12 title-section">
             <div>
-                                    <h1 class="page-title">Title</h1>
+                                    <h1 class="page-title">EV-Virtual Auto Show</h1>
 
                             </div>
             <div>
@@ -217,7 +217,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"en\/","ajaxPageSta
         <div class="ui-grid-col-10">
             <a id="maincontent"></a>
                             <div id="breadcrumbs">
-                    <h2 class="element-invisible">You are here</h2><nav class="breadcrumb"><a href="https://haryanatransport.gov.in/en">Home</a> » Title</nav>                </div>
+                    <h2 class="element-invisible">You are here</h2><nav class="breadcrumb"><a href="https://haryanatransport.gov.in/en">Home</a> » EV-Virtual Auto Show</nav>                </div>
                     </div>
     </div>
 
@@ -238,8 +238,24 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"en\/","ajaxPageSta
     
   <div class="content node-fee">
     <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items">
-        <div class="field-item even" property="content:encoded"><p class="MsoNormal" style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; text-align: center; line-height: normal; mso-outline-level: 1;" align="center"><strong>Sub Title</p>
-</div></div></div>  </div>
+        <div class="field-item even" property="content:encoded"><p class="MsoNormal" style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; text-align: center; line-height: normal; mso-outline-level: 1;" align="center"><strong>EV-Virtual Auto Show
+            <br><br>
+            <br><img src ='./Images//Pages//Picture1.png' style="height: 400px; width: 300px;"/>
+            </p>
+           
+            </div>
+<p>EV Auto Show will take place in Riyadh Saudi Arabia from 01 to 03 of November 2022.
+
+The aim of the exhibition is to promote electric mobility and also to unite the leading stakeholders and decision-makers in the EV Sector. The event will give exhibitors the opportunity to showcase their Electric Vehicles, Innovative equipment, technologies and services for the EV Sector to an enthused audience of policymakers, business leaders, investors, thought leaders and a wide range of end-users, underscoring its role as the main hub driving the future of the industry.
+
+Saudi Arabia has ambitions to become a significant player in the e-vehicle sector.
+
+While 2021 proved to be a game-changer in EV sales globally, Saudi Arabia, with a growing choice of new electric car brands, is expected to witness corresponding growth in the future. This would augur well for companies investing in charging points that are compatible with all EV’s.
+
+Saudi Arabia’s electric vehicle sector is fundamental to the country’s Vision 2030 and its focus on a transition to clean, sustainable energy sources.
+
+The Kingdom’s electric vehicle growth is expected to be helped by the decision taken last year by the Saudi Standards, Metrology and Quality Organization to allow the imports of commercial EVs and charging stations. EVs have the potential to revolutionise the transport sector, Electric Vehicles (EVs) are set to expand rapidly in the coming years and will interlink the transport and electricity sectors like never before.</p>
+</div></div>  </div>
 
       <footer>
           </footer>
