--- a/ev-virtual-auto-show.html
+++ b/ev-virtual-auto-show.html
@@ -137,7 +137,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"en\/","ajaxPageSta
     <!--    <div class="ui-grid-row">
            <div class="ui-grid-col-12 header-section">
                <div class="logo-section">
-                                                                                                   <div id="logo"><a href="#" title="Home"><img src="https://haryanatransport.gov.in/sites/all/themes/hrsrservices/logo.png" class="logo" /></a></div>
+                                                                                                   <div id="logo"><a href="./index.html" title="Home"><img src="https://haryanatransport.gov.in/sites/all/themes/hrsrservices/logo.png" class="logo" /></a></div>
                    </div>
    
                <div class="search-section"  style=" vertical-align: top;">
